# sysinfo-monitor

./: .gitignore  Cargo.toml
monoxide-app/: Cargo.toml  tauri.conf.json
monoxide-app/frontend/: angular.json  package-lock.json  package.json  tsconfig.json
monoxide-app/frontend/src/: index.html  styles.css
monoxide-app/frontend/src/app/: app.component.css  app.component.html  app.component.ts  bytes.pipe.ts  disk_stats_list.component.ts  docker.component.ts  global-stats-item.component.ts  global-stats-panel.component.ts  information.service.ts  network_interfaces_list.component.ts  process-list.component.ts  types.ts  utils.ts
monoxide-app/frontend/src/app/components/: action-icon.component.ts  actions.renderer.ts  cpu-usage.renderer.ts  disk-rw.renderer.ts  icon-action.ts  memory-usage.renderer.ts  run-time.renderer.ts
monoxide-app/src/: main.rs  state.rs
monoxide-backend/: Cargo.toml
monoxide-backend/src/: lib.rs
monoxide-backend/src/battery/: mod.rs  monitor.rs  stats.rs
monoxide-backend/src/disk/: monitor.rs  stats.rs
monoxide-backend/src/docker/: mod.rs  monitor.rs  stats.rs
monoxide-backend/src/network/: mod.rs  monitor.rs  stats.rs
monoxide-backend/src/process/: mod.rs  monitor.rs  stats.rs
monoxide-backend/src/system/: mod.rs  monitor.rs  stats.rs
monoxide-cli/: Cargo.toml
monoxide-cli/src/: main.rs
src/: lib.rs
src/disk/: mod.rs  stats.rs
src/network/: monitor.rs  stats.rs
src/process/: monitor.rs  stats.rs
src/system/: monitor.rs  stats.rs
