[package]
name = "sysinfo-monitor"
authors = ["Mark Onyango"]
license = "MIT"
version = "0.1.0"
repository = "https://github.com/markonyango/sysinfo-monitor"
keywords = ["system-information", "disk", "process", "network", "cpu"]
edition = "2021"
readme = "README"

[dependencies]
sysinfo = "0.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
